--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=edu-forge-post
+server.port=8080
+
+# Active profile configuration
+# Options: dev, prod
+# Change this to switch between environments
+spring.profiles.active=dev
+
+# Common settings for all environments
+# Add any configuration that should be the same across all environments here
