--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=edu-forge-post
 server.port=8080
 
+# MongoDB Configuration (default values, can be overridden by environment variables)
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=eduforge_post
+spring.data.mongodb.auto-index-creation=true
+
+# Logging Configuration (default)
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
+logging.level.org.springframework.web=INFO
+
 # Active profile configuration
 # Options: dev, prod
 # Change this to switch between environments
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # Common settings for all environments
 # Add any configuration that should be the same across all environments here
