Enhance recommendation and series retrieval functionality by adding currentUserId parameter to relevant methods in RecommendationController, SeriesController, and their respective services. Update SeriesResponse to include detailed post interaction information for better user experience.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.springframework.web=INFO
 # Active profile configuration
 # Options: dev, prod
 # Change this to switch between environments
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 # Common settings for all environments
 # Add any configuration that should be the same across all environments here
