Implement MongoDB data initialization and enhance recommendation service configuration. Add JSON data files for posts, series, and recommendations. Update docker-compose.yml for external network usage and set environment variable for recommendation service URL.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -10,6 +8,7 @@ services:
       - .env
     environment:
       - SPRING_PROFILES_ACTIVE=prod
+      - RECOMMENDATION_SERVICE_URL=http://eduforge-recommender:8000
     depends_on:
       - mongodb
     networks:
@@ -33,18 +32,9 @@ services:
       - eduforge-network
     restart: always
 
-  # Comment phần recommendation-service vì không cần chạy lúc này
-  # recommendation-service:
-  #   image: recommendation-service:latest
-  #   ports:
-  #     - "8000:8000"
-  #   networks:
-  #     - eduforge-network
-  #   restart: always
-
 networks:
   eduforge-network:
-    driver: bridge
+    external: true
 
 volumes:
-  mongodb-data: 
+  mongodb-data:
