--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,15 @@ spring.data.mongodb.auto-index-creation=true
 # Logging Configuration (default)
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 logging.level.org.springframework.web=INFO
+logging.level.vn.iuh.ktpm.eduforgepost=DEBUG
 
 # Active profile configuration
 # Options: dev, prod
 # Change this to switch between environments
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # Common settings for all environments
 # Add any configuration that should be the same across all environments here
+
+# Recommendation service configuration
+recommendation.service.url=${RECOMMENDATION_SERVICE_URL:http://eduforge-recommender:8000}
