Update MongoDB port in docker-compose.yml and enhance application.properties for Docker environment configuration with environment variables for MongoDB connection settings.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,14 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=eduforge_post
 spring.data.mongodb.auto-index-creation=true
 
+# MongoDB Configuration for Docker environment
+spring.data.mongodb.host=${MONGODB_HOST:mongodb}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:eduforge_post}
+spring.data.mongodb.username=${MONGODB_USERNAME:}
+spring.data.mongodb.password=${MONGODB_PASSWORD:}
+spring.data.mongodb.auto-index-creation=true
+
 # Logging Configuration (default)
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 logging.level.org.springframework.web=INFO
