Enhance MongoDataInitializer to support forced data import and improve logging. Added configuration property for force import and detailed logging for collection checks and data import status.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.data.mongodb.username=${MONGODB_USERNAME:}
 spring.data.mongodb.password=${MONGODB_PASSWORD:}
 spring.data.mongodb.auto-index-creation=true
 
+# Enable this flag to force import data even if collections are not empty
+spring.data.mongodb.force-import=true
+
 # Logging Configuration (default)
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 logging.level.org.springframework.web=INFO
