--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .env
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - RECOMMENDATION_SERVICE_URL=https://recommender.eduforge.io.vn
+      - RECOMMENDATION_SERVICE_URL=https://eduforge.io.vn:8090
       - MONGODB_HOST=mongodb
       - MONGODB_PORT=27017
     depends_on:
