--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,4 @@ spring.profiles.active=prod
 # Add any configuration that should be the same across all environments here
 
 # Recommendation service configuration
-recommendation.service.url=${RECOMMENDATION_SERVICE_URL:https://recommender.eduforge.io.vn}
+recommendation.service.url=${RECOMMENDATION_SERVICE_URL:https://eduforge.io.vn:8090}
