--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,23 @@
 spring.application.name=edu-forge-post
 server.port=8080
 
-# MongoDB Configuration (default values, can be overridden by environment variables)
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=eduforge_post
-spring.data.mongodb.auto-index-creation=true
-
-# MongoDB Configuration for Docker environment
+# MongoDB Configuration
 spring.data.mongodb.host=${MONGODB_HOST:mongodb}
 spring.data.mongodb.port=${MONGODB_PORT:27017}
 spring.data.mongodb.database=${MONGODB_DATABASE:eduforge_post}
-spring.data.mongodb.username=${MONGODB_USERNAME:}
-spring.data.mongodb.password=${MONGODB_PASSWORD:}
 spring.data.mongodb.auto-index-creation=true
 
 # Enable this flag to force import data even if collections are not empty
 spring.data.mongodb.force-import=true
 
-# Logging Configuration (default)
+# Logging Configuration
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 logging.level.org.springframework.web=INFO
 logging.level.vn.iuh.ktpm.eduforgepost=DEBUG
 
-# Active profile configuration
-# Options: dev, prod
-# Change this to switch between environments
-spring.profiles.active=prod
-
-# Common settings for all environments
-# Add any configuration that should be the same across all environments here
+# Performance Tuning
+server.tomcat.max-threads=200
+server.tomcat.max-connections=10000
 
 # Recommendation service configuration
 recommendation.service.url=${RECOMMENDATION_SERVICE_URL:https://eduforge.io.vn:8090}
