--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.data.mongodb.host=${MONGODB_HOST:mongodb}
 spring.data.mongodb.port=${MONGODB_PORT:27017}
 spring.data.mongodb.database=${MONGODB_DATABASE:eduforge_post}
 spring.data.mongodb.auto-index-creation=true
+# Explicitly disable authentication
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 
 # Enable this flag to force import data even if collections are not empty
 spring.data.mongodb.force-import=true
