Remove unnecessary network name and driver specification in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,7 @@ services:
 
 networks:
   eduforge-network:
-    name: eduforge-network
-    driver: bridge
+    external: false
 
 volumes:
   mongodb-data:
