--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ server.tomcat.max-threads=200
 server.tomcat.max-connections=10000
 
 # Recommendation service configuration
-recommendation.service.url=${RECOMMENDATION_SERVICE_URL:https://eduforge.io.vn:8090}
+recommendation.service.url=${RECOMMENDATION_SERVICE_URL:https://bondhub.cloud:8090}
